--- a/Functional_Diversity_Models.Rmd
+++ b/Functional_Diversity_Models.Rmd
@@ -7,7 +7,6 @@ output: html_document
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
-
 library(tidyverse)
 library(ggplot2)
 library(stats)
@@ -21,6 +20,8 @@ library(emmeans) #post-hoc analyses
 ```
 
 ```{r tidy data, include=FALSE}
+other_traits <- read_csv("Datasheets/seed_mass_leaf_N.csv")
+
 #making a df just for functional diveristy calculations
 for_FD <- read_csv("Datasheets/cwm_traits_updated.csv") %>% 
   left_join(other_traits, by = "species_name") %>% 
@@ -79,8 +80,7 @@ mesic_total_trait <- fd_traits("Mesic", "Total", mesic_total_abund)
 
 ```
 
-### Functional Diversity Calculations
-```{r}
+```{r FD calcs, include=FALSE}
 arid_open_fd <- dbFD(x = arid_open_trait, a = arid_open_abund)
 arid_partial_fd <- dbFD(x = arid_partial_trait, a = arid_partial_abund)
 arid_total_fd <- dbFD(x = arid_total_trait, a = arid_total_abund)
@@ -193,103 +193,188 @@ FD_mesic_total <- as.data.frame(mesic_total_fd$FRic) %>%
   mutate(RaoQ = mesic_total_fd$RaoQ)
 
 FD_all <- rbind(FD_arid_open, FD_arid_partial, FD_arid_total, FD_int_open, FD_int_partial, FD_int_total, FD_mesic_open, FD_mesic_partial, FD_mesic_total)
+```
+
+```{r}
+FD_all %>%
+  pivot_longer(cols = c(FRic, FEve:FDis),
+               names_to = "FD",
+               values_to = "value") %>%
+  ggplot(aes(x = climate, y = value, color = treatment)) +
+  geom_boxplot() +
+  theme_bw() +
+  facet_wrap(~FD, scales = "free")
 
 ```
 
 ### Models
 
 #### FRic
+
+- averaged over treatment, there is a sig difference between Arid-Int and Int-Mesic, but not Arid-Mesic
+- averaged over climate, there is not sig difference between treatments
+- Arid
+    - Arid Partial > Arid Open
+    - Arid Partial > Arid Total
+    - No difference between Arid Open and Arid Total
+- Int
+    - No difference between herbivore treatments at int
+- Mesic
+  - Mesic Open > Mesic Total
+- Open
+    - Mesic Open > Arid Open 
+    - Mesic Open > Int Open
+    - no diff between arid open and int open
+- Partial
+    - Arid Partial > Intermediate Partial
+    - Arid Partial > Mesic Partial
+    - No difference between int partial and mesic partial
+- Total
+    -No difference between climates for total exclosure
+    
 ```{r}
-FRic <- glmmTMB(data = FD_all, FRic ~ climate * treatment, family = gaussian)
+FRic <- glm(data = FD_all, FRic ~ climate * treatment, family = gaussian, na.action = na.fail)
 dredge(FRic) #best model: FRic ~ climate * treatment
 
 # does data fit model?
 simulateResiduals(FRic, plot=T) # looks ok
 shapiro.test(residuals(FRic)) # residuals are normal
 
-# model results
-summary(FRic)
-
-#significatn pairs
+# significatn pairs
 FRic_sig_pairs <-  as.data.frame(pairs(emmeans(FRic, ~ climate * treatment)))%>% 
   filter(p.value <= 0.05)
-FRic_sig_pairs
 
-#all pairs
+# all pairwise comparisons
+emmeans(FRic, pairwise ~ climate)
+emmeans(FRic, pairwise ~ treatment)
 emmeans(FRic, pairwise ~ climate * treatment)
 
 ```
 
 #### FEve
+
+- best fit model is intercept only
+- next best model includes climate, but there is no significance
+- I checked model fit and data distribution, and it all looked good
+
 ```{r}
-FEve <- glmmTMB(data = FD_all, FEve ~ climate * treatment, family = gaussian)
-dredge(FEve) #best model includes only the intercept, so choosing next best which includes treatment only
-FEve <- glmmTMB(data = FD_all, FEve ~ treatment, family = gaussian)
+FEve <- glm(data = FD_all, FEve ~ climate * treatment, family = gaussian, na.action = na.pass)
+dredge(FEve) #best model includes only the intercept, going forward with testing for fit to make sure I'm using correct family
+FEve <- glm(data = FD_all, FEve ~ 1, family = gaussian, na.action = na.fail)
 
 # does data fit model?
-simulateResiduals(FEve, plot=T) # looks ok
+simulateResiduals(FEve, plot=T) # good
 shapiro.test(residuals(FEve)) # residuals are normal
 
-# model results
-summary(FEve)
+ggplot(FD_all, aes(x = FEve)) +
+  geom_histogram() +
+  theme_bw()
 
-#significatn pairs
-FEve_sig_pairs <-  as.data.frame(pairs(emmeans(FEve, ~ treatment)))%>% 
-  filter(p.value <= 0.05)
-FEve_sig_pairs
+shapiro.test(FD_all$FEve) #data is normal
 
-#all pairs
-emmeans(FEve, pairwise ~ treatment)
+# next best model:
+FEve <- glm(data = FD_all, FEve ~ treatment, family = gaussian, na.action = na.fail)
+
+# does data fit model?
+simulateResiduals(FEve, plot=T) # good
+shapiro.test(residuals(FEve)) # residuals are normal
+
+# all pairwise comparisons
+emmeans(FEve, pairwise ~ treatment) #no significance between treatments
 
 ```
 
 #### FDiv
 
+- averaged over climate levels, there is a sig difference between all climate treatments
+- averaged over herbivore treatment, there is a sig difference between Arid-Mesic and Int-Mesic
+- Arid
+    - Arid Open > Arid Partial
+    - Arid Total > Arid Open
+    - Arid Total > Arid Partial
+- Int
+    - Int Open > Int Partial
+    - Int Total > Int Open
+    - Int Total > Int Partial
+- Mesic
+    - No difference in treatment at mesic
+- Open
+    - No difference between climates for open treatments
+- Partial
+    - Mesic Partial > Arid Partial
+    - Mesic Partial > Int Partial
+    - No difference in int partial and arid partial
+-Total
+    - No difference between climates for total exclosure
+
 ```{r}
-FDiv <- glmmTMB(data = FD_all, FDiv ~ climate * treatment, family = gaussian)
+FDiv <- glm(data = FD_all, FDiv ~ climate * treatment, family = gaussian, na.action = na.fail)
 dredge(FDiv) #best model: FDiv ~ climate * treatment
 
 # does data fit model?
 simulateResiduals(FDiv, plot=T) # looks ok
 shapiro.test(residuals(FDiv)) # residuals are  normal
 
-# model results
-summary(FDiv)
-
-#significant pairs
+# significant pairs
 FDiv_sig_pairs <-  as.data.frame(pairs(emmeans(FDiv, ~ climate * treatment)))%>% 
   filter(p.value <= 0.05)
-FDiv_sig_pairs
 
-#all pairs
+# all pairwise comparisons
+emmeans(FDiv, pairwise ~ climate)
+emmeans(FDiv, pairwise ~ treatment)
 emmeans(FDiv, pairwise ~ climate * treatment)
 ```
 
 #### FDis
+
+- Averaged over treatment, sig difference between Arid-Mesic and Int-Mesic
+- Averaged over climate, sig difference between Open-Partial and Open-Total, but not Open-Partial
+- Arid
+    - Arid Total > Arid Open
+    - Arid Total > Arid Partial
+    - No difference between Open and Partial
+- Int
+    - Int Total > Int Open
+    - Int Total > Int Partial
+    - No difference between Open and Partial
+- Mesic
+    - Mesic Open > Mesic Partial
+    - No dif between Total-Open
+    - No dif between Total-Partial
+- Open
+    - Mesic Open > Arid Open
+    - Mesic Open > Int Open
+    - No differecne for Arid-Int
+- Partial
+    - Mesic Partial > Arid Partial
+    - Mesic Partial > Int Partial
+      - No differecne for Arid-Int
+- Total
+    - Int Total > Arid Total
+    - Int Total > Mesic Total
+    - No difference between Mesic-Arid
+    
 ```{r}
-FDis <- glmmTMB(data = FD_all, FDis ~ climate * treatment, family = gaussian)
+FDis <- glm(data = FD_all, FDis ~ climate * treatment, family = gaussian, na.action = na.fail)
 dredge(FDis) #best model: FDis ~ climate * treatment
 
 # does data fit model?
 simulateResiduals(FDis, plot=T) # looks ok
 shapiro.test(residuals(FDis)) # residuals are normal
 
-# model results
-summary(FDis)
-
-#significatn pairs
+# significatn pairs
 FDis_sig_pairs <-  as.data.frame(pairs(emmeans(FDis, ~ climate * treatment)))%>% 
   filter(p.value <= 0.05)
-FDis_sig_pairs
 
-#all pairs
+# all pairwise comparisons
+emmeans(FDis, pairwise ~ climate)
+emmeans(FDis, pairwise ~ treatment)
 emmeans(FDis, pairwise ~ climate * treatment)
 
 ```
 
-#### RaoQ
 
-```{r}
+```{r RaoQ, include=FALSE}
 RaoQ <- glmmTMB(data = FD_all, RaoQ ~ climate * treatment, family = gaussian)
 dredge(RaoQ) #best model: RaoQ ~ climate * treatment
 
@@ -297,13 +382,9 @@ dredge(RaoQ) #best model: RaoQ ~ climate * treatment
 simulateResiduals(RaoQ, plot=T) # Looks like there is a weird pattern
 shapiro.test(residuals(RaoQ)) # but residuals are normal
 
-# model results
-summary(RaoQ)
-
 #significatn pairs
 RaoQ_sig_pairs <-  as.data.frame(pairs(emmeans(RaoQ, ~ climate * treatment)))%>% 
   filter(p.value <= 0.05)
-RaoQ_sig_pairs
 
 #all pairs
 emmeans(RaoQ, pairwise ~ climate * treatment)
